--- a/pagina2.html
+++ b/pagina2.html
@@ -19,10 +19,30 @@
             </ul>
         </nav>
     </header> 
+    <article>articulo de mi gato</article>
+    <div><img src="./img/gato.jpg" alt=""></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem velit recusandae esse, unde suscipit necessitatibus exercitationem ut incidunt vel dolorum minima reprehenderit et saepe laboriosam minus quae adipisci quia.</p>
     
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eos, laboriosam corporis rerum nam libero voluptatibus. Est tempore id repellendus animi eligendi voluptates, qui ipsam nemo ab dolore sint voluptatem.</p>
+    <p>Explicabo soluta unde eum hic odio sit mollitia fugiat ab. In assumenda dolore, aliquam debitis iure officia dolorem praesentium itaque delectus, ratione unde repellendus sint nihil est asperiores quos quis.</p>
+    <p>Tempora nihil nostrum ab quidem blanditiis. Temporibus saepe corrupti minima culpa molestiae quaerat odio, omnis ut. Perspiciatis minus repellendus inventore saepe ipsa. Repellendus assumenda nihil itaque nam minus, voluptatum quos.</p>
     <section>Aquí va la parte central</section>
 
-    <footer>Aquí va el pie</footer>
+    <footer>
+        <!-- Estas lineas de cógido sirven para crear enlaces en forma de listas no relacionadas -->
+        <ul>
+            <li><a href="pie1.html">enlace1</a></li>
+            <li><a href="pie2.html">enlace2</a></li>
+            <li><a href="pie3.html">enlace3</a></li>
+            <li><a href="pie4.html">enlace4</a></li>
+        </ul>
+        <ul>
+            <li><a href="pie1.html">enlace1</a></li>
+            <li><a href="pie2.html">enlace2</a></li>
+            <li><a href="pie3.html">enlace3</a></li>
+            <li><a href="pie4.html">enlace4</a></li>
+        </ul>
+    </footer>
 
 </body>
 
