--- a/p1.html
+++ b/p1.html
@@ -11,7 +11,8 @@
     <section>
         <article>Esta es la cibeles</article>
 
-        <div>  <a href = index.html img src="madridcibeles.jpg" alt=""></div>
+        <div>  img src="madridcibeles.jpg" alt="">  </div>
+        <a href = index.html </a>
        
 
 
