--- a/p1/pagina2.html
+++ b/p1/pagina2.html
@@ -22,12 +22,11 @@
     </header> 
     <article>articulo de mi gato</article>
     <div><img src="./img/gato.jpg" alt=""></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem velit recusandae esse, unde suscipit necessitatibus exercitationem ut incidunt vel dolorum minima reprehenderit et saepe laboriosam minus quae adipisci quia.</p>
+    <p class="bordeado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem velit recusandae esse, unde suscipit necessitatibus exercitationem ut incidunt vel dolorum minima reprehenderit et saepe laboriosam minus quae adipisci quia.</p>
     
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eos, laboriosam corporis rerum nam libero voluptatibus. Est tempore id repellendus animi eligendi voluptates, qui ipsam nemo ab dolore sint voluptatem.</p>
-    <p>Explicabo soluta unde eum hic odio sit mollitia fugiat ab. In assumenda dolore, aliquam debitis iure officia dolorem praesentium itaque delectus, ratione unde repellendus sint nihil est asperiores quos quis.</p>
-    <p>Tempora nihil nostrum ab quidem blanditiis. Temporibus saepe corrupti minima culpa molestiae quaerat odio, omnis ut. Perspiciatis minus repellendus inventore saepe ipsa. Repellendus assumenda nihil itaque nam minus, voluptatum quos.</p>
-    <section>Aquí va la parte central</section>
+    <p class="azul bordeado">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eos, laboriosam corporis rerum nam libero voluptatibus. Est tempore id repellendus animi eligendi voluptates, qui ipsam nemo ab dolore sint voluptatem.</p>
+    <p class="rojo bordeado">Explicabo soluta unde eum hic odio sit mollitia fugiat ab. In assumenda dolore, aliquam debitis iure officia dolorem praesentium itaque delectus, ratione unde repellendus sint nihil est asperiores quos quis.</p>
+    <p class="verde bordeado">Tempora nihil nostrum ab quidem blanditiis. Temporibus saepe corrupti minima culpa molestiae quaerat odio, omnis ut. Perspiciatis minus repellendus inventore saepe ipsa. Repellendus assumenda nihil itaque nam minus, voluptatum quos.</p>
 
     <footer>
         <!-- Estas lineas de cógido sirven para crear enlaces en forma de listas no relacionadas -->
