--- a/zozor/paginazozor.html
+++ b/zozor/paginazozor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Zozor</title>
 </head>
 <body>
@@ -11,10 +12,18 @@
 <div><img src="zozor_logo.png"> </div> <h1>Zozor</h1> 
      <div> <h3>Travel diaries</h3> </div>
      <div>
-         <nav style="float:left">home</nav>
+         <nav style="float:left">Home</nav>
+         <nav style="float:right">Contact </nav>
+         <nav style="float:none">Blog</nav>
+         <nav style="float:none">Resume</nav>
+         <hr/>
      </div>
- </header>
+ </header> 
+ <div id="imagenpuente">
  <img src="sanfrancisco.jpg">
+ <button class="float:right"> <a href="See article"></a></button>
+</div>
+
     <section style="float:left;width:75%">
        <img src="pin.png" > <h1>I'M A GREAT TRAVELLER</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, modi perspiciatis, beatae sint nisi minima saepe ullam dolore quas amet earum quidem minus temporibus necessitatibus eaque maiores asperiores deserunt unde!</p>
@@ -32,7 +41,7 @@
         </article>
     </section>       
                 
-<footer style="float:unset">
+<footer>
     <ul>LAST TWEET</ul>
           
     <ul>MY PICTURES</ul>
