--- a/formularios/formularioprueba/formularioprueba.html
+++ b/formularios/formularioprueba/formularioprueba.html
@@ -10,35 +10,37 @@
 </head>
 
 <body>
+    <div id="myform">
     <h1>Create an Account</h1>
 
     <form method="POST" action="resultado.html">
 
         <div>
-            <input type="text" name="nombre" placeholder="Name">
+            <input type="text" name="nombre" placeholder="Name" id="nombre">
 
         </div>
         <div>
-            <input type="phone" placeholder="phone"required minlength="9" maxlength="11">
+            <input type="tel" name="phone" placeholder="Phone" id="phone" required minlength="9" maxlength="11">
         </div>
         <div>
-            <input type="email" placeholder="Introduce tu email" required>
+            <input type="email" name="email" placeholder="Introduce tu email" id="email" required>
         </div>
         <div>
-            <input type="password" placeholder="password" required>
+            <input type="password" name="password" placeholder="Password" required>
         </div>
 
         <div>
             <input type="checkbox" name="Acepto" id="Acepto" value="1">
-            <label for="acepto">Acepto <span><strong>términos</strong></span> y<span><strong> condiciones</strong></span></label>
+            <label for="acepto">Acepto <span><strong> <a href="#"> términos</a></strong></span> y<span><strong><a href="#"> condiciones</a></strong></span></label>
         </div>
 
         <div>
             <button>Create Account</button>
 
         </div>
+    
     </form>
-
+</div>
 </body>
 
 </html>
